2012-07-18  Dirk Pranke  <dpranke@chromium.org>

        fix python unit tests failing under cygwin
        https://bugs.webkit.org/show_bug.cgi?id=91678

        Reviewed by Adam Barth.

        Fix a case where executive.kill_process was failing under cygwin
        (apple win port) in an unexpected way.
        
        * Scripts/webkitpy/common/system/executive.py:
        (Executive.kill_process):

2012-07-18  Dirk Pranke  <dpranke@chromium.org>

        test-webkitpy: run tests in parallel by default
        https://bugs.webkit.org/show_bug.cgi?id=91422

        Reviewed by Adam Barth.

        We use multiprocessing.cpu_count() for the default number of
        jobs to run; memory overhead should be very low, so this should
        be fine.

        * Scripts/webkitpy/test/main.py:
        (Tester._parse_args):

2012-07-18  Ryosuke Niwa  <rniwa@webkit.org>

        Add Pravin D to the list of contributors.

        * Scripts/webkitpy/common/config/committers.py:

2012-07-18  Balazs Kelemen  <kbalazs@webkit.org>

        [Qt] feature detection in orwt/nrwt does not work with force_static_libs_as_shared
        https://bugs.webkit.org/show_bug.cgi?id=91514

        Reviewed by Dirk Pranke.

        Analyzing libQtWebKit.so is not enough in the case of force_static_libs_as_shared.
        We need to analyze all the shared library or at least the WebCore one.

        * Scripts/webkitdirs.pm:
        (builtDylibPathForName):
        In orwt it is hard coded to search for symbols in the WebCore library.
        While in theory it is possible that symbols for a given feature are not
        located in that, it doesn't happen in practice, so returning the path of
        the WebCore library for a force_static_libs_as_shared build is enough to
        fix the bug and it doesn't require a bigger refactoring. For a default
        build we still return the path of the QtWebKit lib.
        * Scripts/webkitpy/layout_tests/port/qt.py: