@@ -1,3 +1,15 @@
+2012-07-18  Dave Tu  <dtu@chromium.org>
+
+        [chromium] Add gl_tests to flakiness dashboard.
+        https://bugs.webkit.org/show_bug.cgi?id=91680
+
+        Reviewed by Dirk Pranke.
+
+        * TestResultServer/static-dashboards/builders.js:
+        (loadBuildersList):
+        * TestResultServer/static-dashboards/dashboard_base.js:
+        (currentBuilderGroupCategory):
+
 2012-07-18  Dirk Pranke  <dpranke@chromium.org>
 
         fix python unit tests failing under cygwin
